infrastructure/kubernetes/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-dev
  namespace: default
  labels:
    app: portfolio
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
      env: dev
  template:
    metadata:
      labels:
        app: portfolio
        env: dev
    spec:
      containers:
      - name: portfolio
        image: devops-portfolio:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
