infrastructure/kubernetes/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-dev-service
  namespace: default
  labels:
    app: portfolio
    env: dev
spec:
  type: NodePort
  selector:
    app: portfolio
    env: dev
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
